--- a/InitialProject/InitialProject/View/Owner/HotelGaleryView.xaml
+++ b/InitialProject/InitialProject/View/Owner/HotelGaleryView.xaml
@@ -11,7 +11,7 @@
     <Grid>
         <Button Content="Next" HorizontalAlignment="Left" Margin="603,322,0,0" VerticalAlignment="Top" Height="31" Width="92" Click="NextImage"/>
         <Button Content="Preview" HorizontalAlignment="Left" Margin="132,322,0,0" VerticalAlignment="Top" Height="31" Width="87" Click="PreviewImage"/>
-        <Image x:Name="Image" HorizontalAlignment="Left" Height="256" Margin="132,35,0,0" VerticalAlignment="Top" Width="562"/>
 
+        <Image x:Name="Image" Source="{Binding Path=Image, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Left" Height="256" Margin="132,35,0,0" VerticalAlignment="Top" Width="562"/>
     </Grid>
 </Window>
