--- a/InitialProject/InitialProject/View/Owner/RenovationView.xaml
+++ b/InitialProject/InitialProject/View/Owner/RenovationView.xaml
@@ -15,10 +15,10 @@
         <TextBox x:Name="NumberOfDays" HorizontalAlignment="Left" Margin="378,265,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="314" Height="53"/>
         <Button Content="Show Date" HorizontalAlignment="Left" Margin="471,323,0,0" VerticalAlignment="Top" Height="50" Width="128" Click="ShowDates"/>
         <Button Content="Reserve" HorizontalAlignment="Left" Margin="581,545,0,0" VerticalAlignment="Top" Height="47" Width="251" Click="Reserve"/>
-        <Label Content="Label" HorizontalAlignment="Left" Margin="308,76,0,0" VerticalAlignment="Top"/>
-        <Label Content="Label" HorizontalAlignment="Left" Margin="308,140,0,0" VerticalAlignment="Top"/>
-        <Label Content="Label" HorizontalAlignment="Left" Margin="308,209,0,0" VerticalAlignment="Top"/>
-        <Label Content="Label" HorizontalAlignment="Left" Margin="308,279,0,0" VerticalAlignment="Top"/>
+        <Label Content="Accommodation:" HorizontalAlignment="Left" Margin="213,71,0,0" VerticalAlignment="Top" FontSize="20"/>
+        <Label Content="Start Date:" HorizontalAlignment="Left" Margin="271,135,0,0" VerticalAlignment="Top" FontSize="20"/>
+        <Label Content="End Date:" HorizontalAlignment="Left" Margin="278,203,0,0" VerticalAlignment="Top" FontSize="20"/>
+        <Label Content="Number of days:" HorizontalAlignment="Left" Margin="217,273,0,0" VerticalAlignment="Top" FontSize="20"/>
         <ListBox x:Name="ListDates" Margin="70,378,50,80"/>
         <Button Content="Accept Alternative" HorizontalAlignment="Left" Margin="259,545,0,0" VerticalAlignment="Top" Height="47" Width="198" Click="AcceptAlternative"/>
     </Grid>
