--- a/InitialProject/InitialProject/View/Guest1/Guest1AccountForm.xaml
+++ b/InitialProject/InitialProject/View/Guest1/Guest1AccountForm.xaml
@@ -1,31 +1,18 @@
-﻿<Window x:Class="TravelAgency.View.Guest1.Guest1AccountForm"
+﻿<Page x:Class="TravelAgency.View.Guest1.Guest1AccountForm"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TravelAgency.View.Guest1"
-        mc:Ignorable="d"
-        Title="Guest1AccountForm" Height="450" Width="800">
-    <Grid>
-
-        <ToolBar Grid.Row="0" Margin="0,0,0,386"  Height="40">
-            <Button Click="ShowReview">
-                <StackPanel Orientation="Horizontal" Width="115" >
-                    <Image Source="../Resources/Images/add.png" Width="20" Height="25" RenderTransformOrigin="0.5,0.6"/>
-                    <TextBlock Text="Show reviews" FontSize="14" VerticalAlignment="Center" Margin="5,0,0,0" />
-                </StackPanel>
-            </Button>
-            <Separator/>
-            <Button Click="GradeOwner">
-                <StackPanel Orientation="Horizontal" Width="110">
-                    <Image Source="../Resources/Images/add.png" Width="20" Height="25" RenderTransformOrigin="0.5,0.6"/>
-                    <TextBlock Text="Grade owner" FontSize="14" VerticalAlignment="Center" Margin="5,0,0,0" />
-                </StackPanel>
-            </Button>
-            <Separator/>
-        </ToolBar>
-        <Label Content="Super-guest status" HorizontalAlignment="Left" Margin="28,119,0,0" VerticalAlignment="Top"/>
-        <Button Content="Move Reservation" HorizontalAlignment="Left" Margin="170,0,0,0" VerticalAlignment="Center" Click="Button_Click"/>
-
-    </Grid>
-</Window>
+        mc:Ignorable="d" Height="575" Width="1590">
+    <Canvas Background="White" Margin="0,0,0,0">
+        <Button Content="Move Reservation" HorizontalAlignment="Left" VerticalAlignment="Top" Click="Button_Click" Canvas.Left="1246" Canvas.Top="178"/>
+        <Button Content="Show reviews" HorizontalAlignment="Center" VerticalAlignment="Top" Click="ShowReview" Canvas.Left="1246" Canvas.Top="203"/>
+        <Button Content="Grade owner" HorizontalAlignment="Center" VerticalAlignment="Top" Click="GradeOwner" Canvas.Left="1246" Canvas.Top="236"/>
+        <Button x:Name="AccountSettings" Content="Account settings" Height="53" Width="232" FontSize="20" HorizontalAlignment="Center" Canvas.Left="10" Canvas.Top="318" VerticalAlignment="Top" Click="AccountSettingsClick"/>
+        <Button Content="Forum settings" Height="53" Width="232" FontSize="20" HorizontalAlignment="Center" Canvas.Left="10" Canvas.Top="371" VerticalAlignment="Top"/>
+        <Button Content="Visited accommodations" Height="53" Width="232" FontSize="20" Canvas.Left="10" Canvas.Top="424" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Button Content="Active reservations" Height="53" Width="232" FontSize="20" Canvas.Left="10" Canvas.Top="477" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Button x:Name="Logout" Content="Log out" Height="32" Width="139" FontSize="20" Canvas.Left="1441" Canvas.Top="498" HorizontalAlignment="Center" VerticalAlignment="Top" Click="LogoutClick"/>
+    </Canvas>
+</Page>
