--- a/InitialProject/InitialProject/View/Guest1/Guest1Overview.xaml
+++ b/InitialProject/InitialProject/View/Guest1/Guest1Overview.xaml
@@ -23,7 +23,7 @@
         <Label Content="Adress" HorizontalAlignment="Left" Margin="1674,875,0,0" VerticalAlignment="Top" FontSize="24"/>
         <Label Content="Petra Petrovica 14, Novi Sad" HorizontalAlignment="Left" Margin="1498,923,0,0" VerticalAlignment="Top" FontSize="20"/>
         <Grid HorizontalAlignment="Left" VerticalAlignment="Top">
-            <Image HorizontalAlignment="Left" Height="166" VerticalAlignment="Top" Width="698" Source="/Resources/Images/Ta.jpg" Stretch="None" Margin="16,16,0,0"/>
+            <Image x:Name="Image" HorizontalAlignment="Left" Height="166" VerticalAlignment="Top" Width="698" Source="/Resources/Images/Ta.jpg" Stretch="None" Margin="16,16,0,0" MouseLeftButtonUp="Image_MouseLeftButtonUp" MouseEnter="Image_MouseEnter" MouseLeave="Image_MouseLeave"/>
         </Grid>
 
         <Button Content="Search accommodations"  HorizontalAlignment="Left" Margin="722,78,0,0" VerticalAlignment="Top" Height="63" Width="252" FontSize="20" Click="OpenGuest1Form"/>
@@ -34,8 +34,8 @@
         <Label Content="Dark theme" HorizontalAlignment="Left" Margin="1747,78,0,0" VerticalAlignment="Top" FontSize="16"/>
 
         <Frame NavigationUIVisibility="Hidden" x:Name="ShowPage" Canvas.Top="0" Margin="165,192,175,292"/>
-        <Image HorizontalAlignment="Left" Height="37" Margin="890,917,0,0" VerticalAlignment="Top" Width="37" Source="/Resources/Images/facebook-logo-493.png"/>
-        <Image HorizontalAlignment="Left" Height="55" Margin="983,909,0,0" VerticalAlignment="Top" Width="55" Source="/Resources/Images/logo-instagram-png-2430.png"/>
-        <Image HorizontalAlignment="Center" Height="56" Margin="0,908,0,0" VerticalAlignment="Top" Width="56" Source="/Resources/Images/logo-twitter-png-5859.png"/>
+        <Image x:Name="Facebook" MouseEnter="Facebook_MouseEnter" MouseLeave="Facebook_MouseLeave" HorizontalAlignment="Left" Height="37" Margin="890,917,0,0" VerticalAlignment="Top" Width="37" Source="/Resources/Images/facebook-logo-493.png" MouseLeftButtonUp="Facebook_MouseLeftButtonUp"/>
+        <Image x:Name="Instagram" HorizontalAlignment="Left" Height="55" Margin="983,909,0,0" VerticalAlignment="Top" Width="55" Source="/Resources/Images/logo-instagram-png-2430.png" MouseLeftButtonUp="Instagram_MouseLeftButtonUp" MouseEnter="Instagram_MouseEnter" MouseLeave="Instagram_MouseLeave"/>
+        <Image x:Name="Twitter" HorizontalAlignment="Center" Height="56" Margin="0,908,0,0" VerticalAlignment="Top" Width="56" Source="/Resources/Images/logo-twitter-png-5859.png" MouseLeftButtonUp="Twitter_MouseLeftButtonUp" MouseEnter="Twitter_MouseEnter" MouseLeave="Twitter_MouseLeave"/>
     </Grid>
 </Window>
