--- a/InitialProject/InitialProject/View/Owner/MoveReservationView.xaml
+++ b/InitialProject/InitialProject/View/Owner/MoveReservationView.xaml
@@ -2,15 +2,28 @@
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+      xmlns:con ="clr-namespace:TravelAgency.Converter"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:TravelAgency.View.Owner"
       mc:Ignorable="d" 
       d:DesignHeight="680" d:DesignWidth="1024"
       Title="MoveReservationPage">
 
+    <Page.Resources>
+        <con:DateTimeConverter x:Key="dateTimeCon"/>
+    </Page.Resources>
     <Grid Background="White">
-        <DataGrid x:Name="DataPanel" ItemsSource="{Binding Path=Data, UpdateSourceTrigger=PropertyChanged}" Margin="69,44,69,289" Loaded="OnLoad"/>
-        
+        <DataGrid x:Name="DataPanel" ItemsSource="{Binding Path=Data, UpdateSourceTrigger=PropertyChanged}" Margin="69,44,69,289" Loaded="OnLoad">
+            <DataGrid.Columns>
+                <DataGridTextColumn Width="*" Header="HotelName" Binding="{Binding HotelName, UpdateSourceTrigger=PropertyChanged}"/>
+                <DataGridTextColumn Width="*" Header="Guest Username" Binding="{Binding GuestUsername}"/>
+                <DataGridTextColumn Width="*" Header="Old Start Date" Binding="{Binding OldStartDate,Converter={StaticResource dateTimeCon}}"/>
+                <DataGridTextColumn Width="*" Header="Old End Date" Binding="{Binding OldEndDate,Converter={StaticResource dateTimeCon}}"/>
+                <DataGridTextColumn Width="*" Header="New Start Date" Binding="{Binding NewStartDate,Converter={StaticResource dateTimeCon}}"/>
+                <DataGridTextColumn Width="*" Header="New End Date" Binding="{Binding NewEndDate,Converter={StaticResource dateTimeCon}}"/>
+            </DataGrid.Columns>
+        </DataGrid>
+
         <Label x:Name="ReservationInfoLabel" Content="" HorizontalAlignment="Left" Margin="634,479,0,0" VerticalAlignment="Top" Height="66" Width="321"/>
 
         <Button Content="Accept" HorizontalAlignment="Left" Margin="69,479,0,0" VerticalAlignment="Top" Height="66" Width="161" FontSize="20" Click="AcceptMoveReservation"/>
