--- a/InitialProject/InitialProject/View/Guest1/Guest1Form.xaml
+++ b/InitialProject/InitialProject/View/Guest1/Guest1Form.xaml
@@ -6,15 +6,15 @@
       mc:Ignorable="d" Height="575" Width="1590">
     <Canvas Background="White">
         <Label Content="Name:" FontSize="20" Canvas.Left="3" Canvas.Top="58" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Label Content="Type:" FontSize="20" Canvas.Left="3" Canvas.Top="289" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Label Content="Type:" FontSize="20" Canvas.Left="3" Canvas.Top="285" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Label Content="Number of guests:" FontSize="20" Canvas.Left="1" Canvas.Top="325" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Label Content="Number of days for reservation:" FontSize="20" Canvas.Left="3" Canvas.Top="393" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <TextBox x:Name="txtName" TextWrapping="Wrap" FontSize="16"
+        <Label Content="Number of days for reservation:" FontSize="20" Canvas.Left="3" Canvas.Top="397" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <TextBox x:Name="txtName" TextWrapping="Wrap" FontSize="16" VerticalContentAlignment="Center"
             Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}" Height="32" Canvas.Left="3" Canvas.Top="97" Width="454" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <TextBox x:Name="txtCity" TextWrapping="Wrap"  FontSize="16"
-            Text="{Binding City, UpdateSourceTrigger=PropertyChanged}" Height="32" Canvas.Left="3" Canvas.Top="176" Width="454" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <TextBox x:Name="txtNoGuests" TextWrapping="Wrap" FontSize="16"
-            Text="{Binding Max, UpdateSourceTrigger=PropertyChanged}" Height="32" RenderTransformOrigin="0.5,0.5" Canvas.Left="3" Canvas.Top="359" Width="454" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <TextBox x:Name="txtCity" TextWrapping="Wrap"  FontSize="16" VerticalContentAlignment="Center"
+            Text="{Binding City, UpdateSourceTrigger=PropertyChanged}" Height="32" Canvas.Left="3" Canvas.Top="174" Width="454" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <TextBox x:Name="txtNoGuests" TextWrapping="Wrap" FontSize="16" VerticalContentAlignment="Center"
+            Text="{Binding Max, UpdateSourceTrigger=PropertyChanged}" Height="32" RenderTransformOrigin="0.5,0.5" Canvas.Left="3" Canvas.Top="363" Width="454" HorizontalAlignment="Center" VerticalAlignment="Top">
             <TextBox.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -24,18 +24,18 @@
                 </TransformGroup>
             </TextBox.RenderTransform>
         </TextBox>
-        <TextBox x:Name="txtNoDays" TextWrapping="Wrap" Height="32" FontSize="16"
-            Text="{Binding DaysLeft, UpdateSourceTrigger=PropertyChanged}" Canvas.Left="3" Canvas.Top="426" Width="454" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <TextBox x:Name="txtNoDays" TextWrapping="Wrap" Height="32" FontSize="16" VerticalContentAlignment="Center"
+            Text="{Binding DaysLeft, UpdateSourceTrigger=PropertyChanged}" Canvas.Left="3" Canvas.Top="436" Width="454" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Button Click="Search" Content="Search"  FontSize="20" Canvas.Left="6" Canvas.Top="483" Height="40" Width="115" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <RadioButton x:Name="RadioHouse" VerticalContentAlignment="Center" Content="House" GroupName="type" FontSize="20" Canvas.Left="59" Canvas.Top="297" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <RadioButton x:Name="RadioHotel" VerticalContentAlignment="Center" Content="Hotel" GroupName="type" FontSize="20" Canvas.Left="247" Canvas.Top="297" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <RadioButton x:Name="RadioApartment" VerticalContentAlignment="Center" Content="Apartment" GroupName="type" FontSize="20" Canvas.Left="344" Canvas.Top="297" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <RadioButton x:Name="RadioHut" VerticalContentAlignment="Center" Content="Hut" GroupName="type" FontSize="20" Canvas.Left="162" Canvas.Top="297" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <RadioButton x:Name="RadioHouse" VerticalContentAlignment="Center" Content="House" GroupName="type" FontSize="20" Canvas.Left="59" Canvas.Top="293" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <RadioButton x:Name="RadioHotel" VerticalContentAlignment="Center" Content="Hotel" GroupName="type" FontSize="20" Canvas.Left="247" Canvas.Top="293" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <RadioButton x:Name="RadioApartment" VerticalContentAlignment="Center" Content="Apartment" GroupName="type" FontSize="20" Canvas.Left="344" Canvas.Top="293" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <RadioButton x:Name="RadioHut" VerticalContentAlignment="Center" Content="Hut" GroupName="type" FontSize="20" Canvas.Left="162" Canvas.Top="293" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Label Content="City:" FontSize="20" Canvas.Left="3" Canvas.Top="134" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Label Content="Country:" FontSize="20" Canvas.Top="211" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <TextBox x:Name="txtCountry"  FontSize="16" TextWrapping="Wrap" Canvas.Left="3" Canvas.Top="253" Width="454" Height="32" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <TextBox x:Name="txtCountry" VerticalContentAlignment="Center" FontSize="16" TextWrapping="Wrap" Canvas.Left="3" Canvas.Top="249" Width="454" Height="32" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <DataGrid x:Name="DataPanel" AutoGenerateColumns="True" AutoGeneratingColumn="DataPanel_AutoGeneratingColumn"   
-            ItemsSource="{Binding Hotels}" SelectedItem="{Binding SelectedHotel}" Loaded="OnLoad" Height="400" Canvas.Left="594" Canvas.Top="58" Width="986" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+            ItemsSource="{Binding Hotels}" SelectedItem="{Binding SelectedHotel}" Loaded="OnLoad" Height="410" Canvas.Left="594" Canvas.Top="58" Width="986" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Label Content="Searched accommodations:" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="20" Canvas.Left="594" Canvas.Top="16"/>
     </Canvas>
 </Page>
