--- a/InitialProject/InitialProject/View/Guest1/ActiveReservationsPage.xaml
+++ b/InitialProject/InitialProject/View/Guest1/ActiveReservationsPage.xaml
@@ -4,15 +4,9 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:TravelAgency.View.Guest1"
-      mc:Ignorable="d" Height="575" Width="1590">
-    <Canvas Background="White" Margin="0,0,0,0">
-        <Image Height="232" Canvas.Left="14" Canvas.Top="14" Width="228" HorizontalAlignment="Left" VerticalAlignment="Top" Source="/Resources/Images/profilepic.jpg"/>
-        <Button x:Name="AccountSettings" Content="Account settings" Height="53" Width="232" FontSize="20" HorizontalAlignment="Center" Canvas.Left="10" Canvas.Top="318" VerticalAlignment="Top" Click="AccountSettingsClick"/>
-        <Button x:Name="ForumSettings" Content="Forum settings" Height="53" Width="232" FontSize="20" HorizontalAlignment="Center" Canvas.Left="10" Canvas.Top="371" VerticalAlignment="Top" Click="ForumSettingsClick"/>
-        <Button x:Name="VisitedAccommodations" Content="Visited accommodations" Height="53" Width="232" FontSize="20" Canvas.Left="10" Canvas.Top="424" HorizontalAlignment="Center" VerticalAlignment="Top" Click="VisitedAccommodationsClick"/>
-        <Button x:Name="ActiveReservations" Content="Active reservations" Height="53" Width="232" FontSize="20" Canvas.Left="10" Canvas.Top="477" HorizontalAlignment="Center" VerticalAlignment="Top" Click="ActiveReservationsClick"/>
-        <Label Content="Username:" FontSize="20" Canvas.Left="18" Canvas.Top="263" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Label Content="rista" FontSize="20" Canvas.Left="122" Canvas.Top="263" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+      mc:Ignorable="d" Height="516" Width="1319"
+    >
+    <Canvas Background="White">
         <Button Content="Move Reservation" Click="Button_Click" Canvas.Left="845" Canvas.Top="230" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     </Canvas>
 </Page>
