--- a/InitialProject/InitialProject/View/Guest1/GradeOwnerForm.xaml
+++ b/InitialProject/InitialProject/View/Guest1/GradeOwnerForm.xaml
@@ -1,38 +1,43 @@
-﻿<Window x:Class="TravelAgency.View.Guest1.GradeOwnerForm"
+﻿<Page
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TravelAgency.View.Guest1"
-        mc:Ignorable="d"
-        Title="GradeOwnerForm" Height="604" Width="547">
-    <Grid Loaded="Window_Loaded" Margin="0,0,0,-27">
-        <StackPanel Orientation ="Horizontal" Margin="36,146,347,409">
-            <RadioButton x:Name="rbHotelOption1" Content="1" />
-            <RadioButton x:Name="rbHotelOption2" Content="2" Margin="5,0,0,0" />
-            <RadioButton x:Name="rbHotelOption3" Content="3" Margin="5,0,0,0" />
-            <RadioButton x:Name="rbHotelOption4" Content="4" Margin="5,0,0,0" />
-            <RadioButton x:Name="rbHotelOption5" Content="5" Margin="5,0,0,0" />
-        </StackPanel>
-        <StackPanel Orientation ="Horizontal" Margin="36,201,356,361">
-            <RadioButton x:Name="rbOwnerOption1" Content="1" />
-            <RadioButton x:Name="rbOwnerOption2" Content="2" Margin="5,0,0,0" />
-            <RadioButton x:Name="rbOwnerOption3" Content="3" Margin="5,0,0,0" />
-            <RadioButton x:Name="rbOwnerOption4" Content="4" Margin="5,0,0,0" />
-            <RadioButton x:Name="rbOwnerOption5" Content="5" Margin="5,0,0,0" />
-        </StackPanel>
-        <Label Content="Owner of:" HorizontalAlignment="Left" Margin="44,34,0,0" VerticalAlignment="Top"/>
-        <ComboBox x:Name="cbHotelName" HorizontalAlignment="Left" Margin="44,65,0,0" VerticalAlignment="Top" Width="120" Loaded="LoadHotels" SelectionChanged="cbHotelName_SelectionChanged"/>
-        <Label Content="Comment:" HorizontalAlignment="Left" Margin="24,220,0,0" VerticalAlignment="Top"/>
-        <Label Content="ImageUrls:" HorizontalAlignment="Left" Margin="22,349,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="txtComment" HorizontalAlignment="Left" Margin="22,0,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Width="356" Height="80" TextChanged="txtComment_TextChanged"/>
+        xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls" x:Class="TravelAgency.View.Guest1.GradeOwnerForm"
+        mc:Ignorable="d" Height="516" Width="1319">
+    <Canvas Background="White">
+        <Label Content="Owner of:" HorizontalAlignment="Left" VerticalAlignment="Top" Canvas.Left="894" Canvas.Top="136"/>
+        <ComboBox x:Name="cbHotelName" HorizontalAlignment="Left" VerticalAlignment="Top" Width="120" Loaded="LoadHotels" SelectionChanged="cbHotelName_SelectionChanged" Canvas.Left="894" Canvas.Top="166"/>
+        <Label Content="Additional comment:" FontSize="20" HorizontalAlignment="Left" VerticalAlignment="Top" Canvas.Left="24" Canvas.Top="177"/>
+        <Label Content="Add photos of accommodation:" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="22" Canvas.Top="337"/>
+        <TextBox x:Name="txtComment" HorizontalAlignment="Center" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="653" Height="116" TextChanged="txtComment_TextChanged" Canvas.Left="33" Canvas.Top="215"/>
         <TextBox x:Name="txtImg" HorizontalAlignment="Left" Margin="22,373,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="356" Height="20"/>
-        <Button x:Name="btnPlus" Content="+" HorizontalAlignment="Left" Margin="387,373,0,0" VerticalAlignment="Top" Width="20" Click="btnPlus_Click"/>
-        <Button x:Name="btnAddImage" Content="Add" HorizontalAlignment="Left" Margin="413,373,0,0" VerticalAlignment="Top" Click="btnAddImage_Click"/>
-        <Button x:Name="btnDeleteImage" Content="Delete" HorizontalAlignment="Left" Margin="445,373,0,0" VerticalAlignment="Top" Click="btnDeleteImage_Click"/>
-        <ListBox x:Name="ListViewImg" Margin="22,399,169,71"/>
-        <Button x:Name="btnGrade" Content="Grade" HorizontalAlignment="Left" Margin="412,435,0,0" VerticalAlignment="Top" Click="Grade"/>
-        <Label Content="Cleanliness:" HorizontalAlignment="Left" Margin="33,120,0,0" VerticalAlignment="Top"/>
-        <Label Content="Owner politeness:" HorizontalAlignment="Left" Margin="34,171,0,0" VerticalAlignment="Top"/>
-    </Grid>
-</Window>
+        <Button x:Name="btnPlus" Content="+" FontSize="20" HorizontalAlignment="Left" VerticalAlignment="Top" Width="20" Click="btnPlus_Click" Canvas.Left="323" Canvas.Top="336"/>
+        <Button x:Name="btnAddImage" FontSize="20" Content="Add" HorizontalAlignment="Left" VerticalAlignment="Top" Click="btnAddImage_Click" Canvas.Left="349" Canvas.Top="336"/>
+        <Button x:Name="btnDeleteImage" FontSize="20" Content="Delete" HorizontalAlignment="Left" VerticalAlignment="Top" Click="btnDeleteImage_Click" Canvas.Left="381" Canvas.Top="336"/>
+        <ListBox x:Name="ListViewImg" Height="80" Canvas.Top="398" Width="354" Canvas.Left="24" d:ItemsSource="{d:SampleData ItemCount=5}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Button x:Name="btnGrade" FontSize="20" Content="Grade" HorizontalAlignment="Left" VerticalAlignment="Top" Click="Grade" Canvas.Left="33" Canvas.Top="486"/>
+        <Label Content="Cleanliness:" FontSize="20" HorizontalAlignment="Left" Margin="33,120,0,0" VerticalAlignment="Top"/>
+        <Label Content="Host:" FontSize="20" HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Left="387" Canvas.Top="123"/>
+
+        <StackPanel Orientation ="Horizontal" Canvas.Left="156" Canvas.Top="130">
+            <RadioButton x:Name="rbHotelOption1" FontSize="20" VerticalContentAlignment="Center" Content="1" />
+            <RadioButton x:Name="rbHotelOption2" FontSize="20" VerticalContentAlignment="Center" Content="2" Margin="5,0,0,0" />
+            <RadioButton x:Name="rbHotelOption3" FontSize="20" VerticalContentAlignment="Center" Content="3" Margin="5,0,0,0" />
+            <RadioButton x:Name="rbHotelOption4" FontSize="20" VerticalContentAlignment="Center" Content="4" Margin="5,0,0,0" />
+            <RadioButton x:Name="rbHotelOption5" FontSize="20" VerticalContentAlignment="Center" Content="5" Margin="5,0,0,0" />
+        </StackPanel>
+        <StackPanel Orientation ="Horizontal" Canvas.Left="481" Canvas.Top="134" HorizontalAlignment="Left" VerticalAlignment="Top">
+            <RadioButton x:Name="rbOwnerOption1" FontSize="20" VerticalContentAlignment="Center" Content="1" />
+            <RadioButton x:Name="rbOwnerOption2" FontSize="20" VerticalContentAlignment="Center" Content="2" Margin="5,0,0,0" />
+            <RadioButton x:Name="rbOwnerOption3" FontSize="20" VerticalContentAlignment="Center" Content="3" Margin="5,0,0,0" />
+            <RadioButton x:Name="rbOwnerOption4" FontSize="20" VerticalContentAlignment="Center" Content="4" Margin="5,0,0,0" />
+            <RadioButton x:Name="rbOwnerOption5" FontSize="20" VerticalContentAlignment="Center" Content="5" Margin="5,0,0,0" />
+        </StackPanel>
+        <Rectangle Height="35" Canvas.Left="148" Stroke="Black" Canvas.Top="122" Width="201" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Rectangle Height="35" Canvas.Left="476" Stroke="Black" Canvas.Top="125" Width="193" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Label Content="Rate accommodation:" FontSize="20" Canvas.Left="51" Canvas.Top="22"/>
+        <DataGrid Height="56" Width="1271" d:ItemsSource="{d:SampleData ItemCount=5}" Canvas.Left="51" Canvas.Top="59" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    </Canvas>
+</Page>
