--- a/InitialProject/InitialProject/View/Guest1/VisitedAccommodationsPage.xaml
+++ b/InitialProject/InitialProject/View/Guest1/VisitedAccommodationsPage.xaml
@@ -4,16 +4,38 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:TravelAgency.View.Guest1"
-      mc:Ignorable="d" Height="575" Width="1590">
-    <Canvas Background="White" Margin="0,0,0,0">
-        <Image Height="232" Canvas.Left="14" Canvas.Top="14" Width="228" HorizontalAlignment="Left" VerticalAlignment="Top" Source="/Resources/Images/profilepic.jpg"/>
-        <Button x:Name="AccountSettings" Content="Account settings" Height="53" Width="232" FontSize="20" HorizontalAlignment="Center" Canvas.Left="10" Canvas.Top="318" VerticalAlignment="Top" Click="AccountSettingsClick"/>
-        <Button x:Name="ForumSettings" Content="Forum settings" Height="53" Width="232" FontSize="20" HorizontalAlignment="Center" Canvas.Left="10" Canvas.Top="371" VerticalAlignment="Top" Click="ForumSettingsClick"/>
-        <Button x:Name="VisitedAccommodations" Content="Visited accommodations" Height="53" Width="232" FontSize="20" Canvas.Left="10" Canvas.Top="424" HorizontalAlignment="Center" VerticalAlignment="Top" Click="VisitedAccommodationsClick"/>
-        <Button x:Name="ActiveReservations" Content="Active reservations" Height="53" Width="232" FontSize="20" Canvas.Left="10" Canvas.Top="477" HorizontalAlignment="Center" VerticalAlignment="Top" Click="ActiveReservationsClick"/>
-        <Label Content="Username:" FontSize="20" Canvas.Left="18" Canvas.Top="263" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Label Content="rista" FontSize="20" Canvas.Left="122" Canvas.Top="263" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Button Content="Show reviews" Click="ShowReview" Canvas.Left="845" Canvas.Top="254" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Button Content="Grade owner" Click="GradeOwner" Canvas.Left="845" Canvas.Top="288" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+      mc:Ignorable="d" Height="516" Width="1319">
+    <Page.Resources>
+        <Style x:Key="IsRatedTextBlockStyle" TargetType="TextBlock">
+            <Setter Property="Foreground" Value="Black" />
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding IsRated}" Value="NotGraded">
+                    <Setter Property="Foreground" Value="Blue" />
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+    </Page.Resources>
+
+    <Canvas Background="White">
+        <DataGrid x:Name="DataPanel" Loaded="OnLoad" Height="212" Canvas.Left="27" Canvas.Top="304" Width="1267" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Label Content="How owners rated you:" FontSize="20" Canvas.Left="28" Canvas.Top="266" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Label Content="Visited accommodations:" FontSize="20" Canvas.Left="29" Canvas.Top="-5" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <DataGrid x:Name="ShowVisited" Height="194" Width="1266" Canvas.Left="28" Canvas.Top="33" HorizontalAlignment="Left" VerticalAlignment="Top" Loaded="LoadVisited">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Hotel Name" Binding="{Binding HotelName}" />
+                <DataGridTextColumn Header="City" Binding="{Binding City}" />
+                <DataGridTextColumn Header="Country" Binding="{Binding Country}" />
+                <DataGridTextColumn Header="Type" Binding="{Binding Type}" />
+                <DataGridTextColumn Header="Number of Guests" Binding="{Binding NumberOfGuests}" />
+                <DataGridTextColumn Header="Number of Days" Binding="{Binding NumberOfDays}" />
+                <DataGridTemplateColumn Header="IsRated">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <TextBlock x:Name="IsRatedTextBlock" Text="{Binding IsRated}" Style="{StaticResource IsRatedTextBlockStyle}" MouseLeftButtonDown="TextBlock_PreviewMouseDown" />
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+            </DataGrid.Columns>
+        </DataGrid>
     </Canvas>
 </Page>
