--- a/InitialProject/InitialProject/View/Guest2/AllTourRequests.xaml
+++ b/InitialProject/InitialProject/View/Guest2/AllTourRequests.xaml
@@ -6,8 +6,9 @@
         xmlns:local="clr-namespace:TravelAgency.View.Guest2"
         mc:Ignorable="d"
         Title="AllTourRequests" Height="450" Width="800">
-    <Grid>
+    <Grid Margin="0,0,0,3">
         <DataGrid x:Name="DataPanel" HorizontalAlignment="Left" Height="206" Margin="118,69,0,0" VerticalAlignment="Top" Width="582" Loaded="LoadData"/>
         <Button Content="Exit" HorizontalAlignment="Left" Margin="727,360,0,0" VerticalAlignment="Top" Click="Exit" Width="47" Height="33"/>
+        
     </Grid>
 </Window>
