--- a/InitialProject/InitialProject/View/Guest2/CreatingTourRequest.xaml
+++ b/InitialProject/InitialProject/View/Guest2/CreatingTourRequest.xaml
@@ -7,9 +7,15 @@
         mc:Ignorable="d"
         Title="CreatingTourRequest" Height="450" Width="800">
     <Grid>
+        <Label Content="{Binding Path=CityV, UpdateSourceTrigger=PropertyChanged}"  HorizontalAlignment="Left" VerticalAlignment="Top" Width="103" Height="18" Foreground="Red" FontSize="10" Margin="268,69,0,0"/>
+        <Label Content="{Binding Path=CountryV, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="103" Height="18" Foreground="Red" FontSize="10" Margin="268,92,0,0"/>
+        <Label Content="{Binding Path=DescriptionV, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="103" Height="18" Foreground="Red" FontSize="10" Margin="268,119,0,0"/>
+        <Label Content="{Binding Path=LanguageV, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="103" Height="18" Foreground="Red" FontSize="10" Margin="268,142,0,0"/>
+        <Label Content="{Binding Path=MaxGuestsV, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="103" Height="18" Foreground="Red" FontSize="10" Margin="268,164,0,0"/>
+
         <Button Content="Save" HorizontalAlignment="Left" Margin="106,291,0,0" VerticalAlignment="Top" Click="SaveTourRequest"/>
         <Button Content="Cancel" HorizontalAlignment="Left" Margin="166,291,0,0" VerticalAlignment="Top" Click="Cancel"/>
-        <TextBox x:Name="txtCity" HorizontalAlignment="Left" Margin="106,69,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="txtCity" HorizontalAlignment="Left" Margin="106,69,0,0" TextWrapping="Wrap"  Text="{Binding Path=City, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Width="120" TextChanged="CityValidation"/>
         <TextBox x:Name="txtCountry" HorizontalAlignment="Left" Margin="106,92,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
         <TextBox x:Name="txtDescription" HorizontalAlignment="Left" Margin="106,115,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
         <TextBox x:Name="txtLanguage" HorizontalAlignment="Left" Margin="106,138,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
@@ -24,6 +30,8 @@
         <Label Content="Country" HorizontalAlignment="Left" Margin="46,88,0,0" VerticalAlignment="Top"/>
         <Label Content="Start Date" HorizontalAlignment="Left" Margin="39,201,0,0" VerticalAlignment="Top"/>
         <Label Content="End Date" HorizontalAlignment="Left" Margin="39,232,0,0" VerticalAlignment="Top"/>
+        <Button Content="Exit" HorizontalAlignment="Left" Margin="727,360,0,0" VerticalAlignment="Top" Click="Exit" Width="47" Height="33"/>
+        
 
     </Grid>
 </Window>
