--- a/InitialProject/InitialProject/View/Guest2/TourRequestsStatistic.xaml
+++ b/InitialProject/InitialProject/View/Guest2/TourRequestsStatistic.xaml
@@ -16,6 +16,7 @@
         <Label Content="Accepted-" HorizontalAlignment="Left" Margin="23,300,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="txt2" HorizontalAlignment="Left" Margin="95,346,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
         <Label Content="Declined" HorizontalAlignment="Left" Margin="23,342,0,0" VerticalAlignment="Top"/>
+        <Button Content="Exit" HorizontalAlignment="Left" Margin="727,360,0,0" VerticalAlignment="Top" Click="Exit" Width="47" Height="33"/>
 
     </Grid>
 </Window>
